--- a/alarino_frontend/src/templates/about.html
+++ b/alarino_frontend/src/templates/about.html
@@ -2,8 +2,8 @@
 {% block title %}About Alarino{% endblock %}
 
 {% block content %}
-  <main class="pt-28 px-4">
-    <article class="bg-[#f4ecdd] rounded-3xl p-6 mx-auto max-w-3xl text-left text-lg leading-relaxed space-y-4">
+  <main class="pt-28 px-2 sm:px-8 md:px-16 lg:px-24 xl:px-32 2xl:px-48">
+    <article class="bg-[#f4ecdd] rounded-3xl p-6 sm:p-8 md:p-10 mx-auto max-w-4xl text-left text-lg leading-relaxed space-y-4">
       {{ content|safe }}
     </article>
   </main>
