--- a/alarino_frontend/src/templates/base.html
+++ b/alarino_frontend/src/templates/base.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{% block title %}Alarino{% endblock %}</title>
+    <meta charset="UTF-8" />
+    <title>
+      {% block title %}Alarino | English to Yoruba Translator & Dictionary Online{% endblock %}
+    </title>
+
+    <meta name="meta-description" content="Alarino - English to Yoruba Translation Dictionary">
+    <meta name="keywords" content="Yoruba, English, translation, dictionary, African languages">
+
+    <link rel="icon" href="/alarino-logo-fit.svg" type="image/svg+xml" />
     <link href="/main.css" rel="stylesheet">
-    <!-- <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet"> -->
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
+
   <body class="bg-gradient-to-b from-[#5c4525] to-[#e8dfca] min-h-screen text-[#2e200f]">
+    <!-- Navbar -->
+    <header class="flex justify-between items-center p-6 space-y-0 text-white fixed top-0 left-0 right-0 z-50 bg-[#5c4525] bg-opacity-90">
+      <a href="/">
+        <img src="/alarino-logo-fit.svg" alt="Alarino Logo" class="h-10" />
+      </a>
+      <nav class="md:flex-row md:space-x-6 space-x-1 text-center">
+        <a href="/about" class="hover:underline">About</a>
+        <a href="https://github.com/Iyki/alarino/issues" class="hover:underline">Contribute</a>
+      </nav>
+    </header>
+
     {% block content %}{% endblock %}
+    
   </body>
 </html>
