--- a/alarino_frontend/src/templates/base.html
+++ b/alarino_frontend/src/templates/base.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       {% block title %}Alarino | English to Yoruba Translator & Dictionary Online{% endblock %}
     </title>
-
     <meta name="meta-description" content="Alarino - English to Yoruba Translation Dictionary">
     <meta name="keywords" content="Yoruba, English, translation, dictionary, African languages">
 
