--- a/alarino_frontend/src/templates/homepage.html
+++ b/alarino_frontend/src/templates/homepage.html
@@ -9,16 +9,6 @@
     <link id="canonical-link" rel="canonical" href="https://alarino.com" />
     <link rel="icon" href="/alarino-logo-fit.svg" type="image/svg+xml" />
     <link href="/main.css" rel="stylesheet">
-    <!-- <style>
-      body {
-        font-family: serif;
-      }
-      
-      @keyframes modalopen {
-        from {opacity: 0; transform: translateY(-30px);}
-        to {opacity: 1; transform: translateY(0);}
-      }
-    </style> -->
   </head>
   <body class="bg-gradient-to-b from-[#5c4525] to-[#e8dfca] min-h-screen text-[#2e200f]">
     <!-- Navbar -->
@@ -81,7 +71,7 @@
         </div>
 
         <!-- Daily Proverbs -->
-        <div class="bg-[#f4ecdd] rounded-xl p-4 flex flex-col h-full" hidden>
+        <div class="bg-[#f4ecdd] rounded-xl p-4 flex flex-col h-full">
           <h3 class="font-bold mb-2">Daily Proverbs</h3>
           <div class="bg-white rounded-lg p-5 flex-grow">
               <p class="italic">Bí ojú kò bá rí, ẹnu kì í sọ nǹkan.</p>
@@ -101,7 +91,7 @@
     </main>
 
     <!-- Add Word Modal -->
-    <div id="addWordModal" class="hidden fixed inset-0 z-10 overflow-auto bg-black bg-opacity-40">
+    <div id="addWordModal" class="hidden fixed inset-0 z-10 overflow-auto bg-transparent backdrop-blur-sm">
       <div class="relative bg-[#f4ecdd] mx-auto mt-24 rounded-2xl w-11/12 max-w-2xl shadow-lg" style="animation: modalopen 0.4s;">
         <div class="px-6 py-4 border-b border-[#e2d9c8]">
           <span class="float-right text-3xl font-bold text-[#5c4525] hover:text-black cursor-pointer" onclick="closeAddWordModal()">&times;</span>
@@ -122,7 +112,7 @@
     </div>
 
     <!-- Feedback Modal -->
-    <div id="feedbackModal" class="hidden fixed inset-0 z-10 overflow-auto bg-black bg-opacity-40">
+    <div id="feedbackModal" class="hidden fixed inset-0 z-10 overflow-auto bg-transparent backdrop-blur-sm">
       <div class="relative bg-[#f4ecdd] mx-auto mt-24 rounded-2xl w-11/12 max-w-2xl shadow-lg" style="animation: modalopen 0.4s;">
         <div class="px-6 py-4 border-b border-[#e2d9c8]">
           <span class="float-right text-3xl font-bold text-[#5c4525] hover:text-black cursor-pointer" onclick="closeFeedbackModal()">&times;</span>
