add proverbs to webpage

--- a/alarino_frontend/src/templates/homepage.html
+++ b/alarino_frontend/src/templates/homepage.html
@@ -60,7 +60,7 @@
           <div class="bg-[#f4ecdd] rounded-xl p-4 flex flex-col h-full">
           <h3 class="font-bold mb-2">Word of the Day</h3>
           <div class="bg-white rounded-lg p-5 flex-grow">
-            <p id="dailyYorubaWord" class="text-2xl font-semibold">ìfé</p>
+            <p id="dailyYorubaWord" class="text-2xl font-semibold">ìfẹ́</p>
             <p id="dailyEnglishWord" class="text-lg text-gray-500 mt-1 pt-1 border-t border-gray-300 hidden">love</p>
           </div>
           <div class="flex justify-end mt-1">
@@ -72,10 +72,15 @@
 
         <!-- Daily Proverbs -->
         <div class="bg-[#f4ecdd] rounded-xl p-4 flex flex-col h-full">
-          <h3 class="font-bold mb-2">Daily Proverbs</h3>
+          <h3 class="font-bold mb-2">Proverbs</h3>
           <div class="bg-white rounded-lg p-5 flex-grow">
-              <p class="italic">Bí ojú kò bá rí, ẹnu kì í sọ nǹkan.</p>
-              <p class="text-sm text-gray-600 mt-1">If the eye does not see, the mouth says nothing.</p>
+              <p id="proverb-yoruba" class="italic">Bí ojú kò bá rí, ẹnu kì í sọ nǹkan.</p>
+              <p id="proverb-english" class="text-sm text-gray-600 mt-1">If the eye does not see, the mouth says nothing.</p>
+          </div>
+          <div class="flex justify-end mt-1">
+            <button id="next-proverb-btn" class="text-sm text-[#1b2f1d] underline">
+              Next Proverb
+            </button>
           </div>
         </div>
 
