make the default upload a validation dry run

--- a/alarino_frontend/src/templates/admin.html
+++ b/alarino_frontend/src/templates/admin.html
@@ -37,6 +37,7 @@
           id="dryRun"
           type="checkbox"
           class="h-4 w-4 rounded border-gray-300 text-[#1b2f1d] focus:ring-[#1b2f1d]"
+          checked
         />
         <label for="dryRun" class="ml-2 block text-sm text-gray-900">Dry Run</label>
       </div>
