make default word example alarino

--- a/alarino_frontend/src/templates/homepage.html
+++ b/alarino_frontend/src/templates/homepage.html
@@ -33,8 +33,8 @@
       </button>
     </form>
     <div id="translationResult" class="bg-white p-4 rounded-xl text-left">
-      <p id="wordLabel" class="text-xl font-bold">water <span class="text-sm text-gray-500">(example)</span></p>
-      <p id="wordYoruba" class="italic text-gray-700">omi <span class="not-italic text-sm text-gray-500">n.</span></p>
+      <p id="wordLabel" class="text-xl font-bold">liaison <span class="text-sm text-gray-500">(example)</span></p>
+      <p id="wordYoruba" class="italic text-gray-700">alárìnọ̀ <span class="not-italic text-sm text-gray-500">n.</span></p>
       <p id="wordDefinition" class="mt-2 text-gray-600"></p>
     </div>
   </section>
