slight changes to UI and reduce daily word constraints

--- a/alarino_frontend/src/templates/homepage.html
+++ b/alarino_frontend/src/templates/homepage.html
@@ -50,7 +50,7 @@
       </div>
       <div class="flex justify-end mt-1">
         <button onclick="toggleDailyTranslation()" id="viewTranslationBtn"
-          class="text-sm text-[#1b2f1d] underline cursor-pointer hover:no-underline focus:outline-1 focus:outline-offset-2 focus:outline-[#1b2f1d] hover:bg-[#0F1A10]">
+          class="text-sm text-[#1b2f1d] underline cursor-pointer hover:no-underline hover:text-white hover:bg-[#0F1A10]">
           View translation
         </button>
       </div>
@@ -65,7 +65,7 @@
       </div>
       <div class="flex justify-end mt-1">
         <button id="next-proverb-btn"
-          class="text-sm text-[#1b2f1d] underline cursor-pointer hover:no-underline focus:outline-1 focus:outline-offset-2 focus:outline-[#1b2f1d]">
+          class="text-sm text-[#1b2f1d] underline cursor-pointer hover:no-underline focus:outline-none">
           Next Proverb
         </button>
       </div>
