fix ui for experimental section

--- a/alarino_frontend/src/templates/homepage.html
+++ b/alarino_frontend/src/templates/homepage.html
@@ -31,7 +31,7 @@
         Translate
       </button>
     </form>
-    <div class="grid grid-rows-2 gap-4">
+    <div class="grid gap-4">
       <section id="translationResult" class="bg-white p-4 rounded-xl text-left">
         <p id="wordLabel" class="text-xl font-bold">liaison <span class="text-sm text-gray-500">(example)</span></p>
         <p id="wordYoruba" class="italic text-gray-700">alárìnọ̀ <span class="not-italic text-sm text-gray-500">n.</span>
